# CLiPE

./: .env  .gitignore  README.md  docker-compose.yml  init.sql
admin-panel/: index.html  package-lock.json
backend/: .env  main.go
backend/internal/action/: dto.go  mapper.go  model.go  repository.go
backend/internal/decision/: dto.go  mapper.go  model.go
backend/internal/host/: dto.go  mapper.go  model.go
backend/internal/policy/: dto.go  handler.go  mapper.go  (+3 more)
crud/: Dockerfile  go.mod  go.sum  main.go
decision/: go.mod  main.go
documentation/: Введение.docx  ПЗ.docx  План-график.docx  Постановка задачи (ПрИС).docx  ПрактическаяЧасть .docx  Тестирование.docx
documentation/auxiliary/: Постановка задачи (ПрИС).docx  Проектирование.docx
documentation/predefence/: Document1.docx
documentation/test/: clipe.json
integration/: Makefile  install.py  uninstall.py
integration/scripts/: .env  install.py  refresh.py  uninstall.py
module/: CMakeLists.txt
pam_module/: CMakeLists.txt  requirements.txt
pam_module/src/pam_clipe/: CMakeLists.txt  pam_clipe.cpp
server/: .env  Makefile  docker-compose.yml  init.sql  plan.md  test_data.sql
server/api/: main.go
server/crud/: go.mod  go.sum  main.go
server/decision/: Makefile  go.mod  go.sum  main.go
server/nginx/: Dockerfile  nginx.conf
server/panel/: package-lock.json  package.json  vite.config.js
server/test/: api.json  e2e.json
ssl/: .srl  ca.key  ca.srl  server.crt  server.csr  server.ext  server.key
test/: clipe.json
tls/: ca.crt  ca.srl  server.crt  server.csr  server.ext  server.key
(+194 files in other folders)
